syntax = "proto3";

package swapi.vehicle;

option go_package = "github.com/mercari/grpc-federation/demo/swapi/vehicle;vehiclepb";

service VehicleService { 
  rpc GetVehicle(GetVehicleRequest) returns (GetVehicleReply) {}
  rpc ListVehicles(ListVehiclesRequest) returns (ListVehiclesReply) {}
}

// GetVehicleRequest.
message GetVehicleRequest {
  // vehicle id.
  int64 id = 1;
}

// GetVehicleReply.
message GetVehicleReply {
  Vehicle vehicle = 1;
}

// ListVehiclesRequest.
message ListVehiclesRequest {
  repeated int64 ids = 1;
}

// ListVehiclesReply.
message ListVehiclesReply {
  repeated Vehicle vehicles = 1;
}

// Vehicle is a single transport craft that does not have hyperdrive capability..
message Vehicle {
  // vehicle id.
  int64 id = 1;
  // The name of this vehicle. The common name, such as "Sand Crawler" or "Speeder bike".
  string name = 2;
  // The model or official name of this vehicle. Such as "All-Terrain Attack Transport".
  string model = 3;
  // The class of this vehicle, such as "Wheeled" or "Repulsorcraft".
  string vehicle_class = 4;
  // The manufacturer of this vehicle. Comma separated if more than one.
  string manufacturer = 5;
  // The length of this vehicle in meters.
  string length = 6;
  // The cost of this vehicle new, in Galactic Credits.
  string cost_in_credits = 7;
  // The number of personnel needed to run or pilot this vehicle.
  string crew = 8;
  // The number of non-essential people this vehicle can transport.
  string passengers = 9;
  // The maximum speed of this vehicle in the atmosphere.
  string max_atmosphering_speed = 10;
  // The maximum number of kilograms that this vehicle can transport.
  string cargo_capacity = 11;
  // The maximum length of time that this vehicle can provide consumables for its entire crew without having to resupply.
  string consumables = 12;
  // the hypermedia URL of this resource.
  string url = 13;
  // the ISO 8601 date format of the time that this resource was created.
  string created = 14;
  // the ISO 8601 date format of the time that this resource was edited.
  string edited = 15;
  // film ids.
  repeated int64 film_ids = 16;
  // pilot ids.
  repeated int64 pilot_ids = 17;
}
